完成StackHandler分化包装逻辑，等待检查