@@ -1,52 +1,59 @@
 package com.wintercogs.beyonddimensions.Api.DataBase.Handler;
 
-import com.wintercogs.beyonddimensions.Api.DataBase.Stack.ChemicalStackType;
-import com.wintercogs.beyonddimensions.Api.DataBase.Stack.IStackType;
+import com.wintercogs.beyonddimensions.Api.DataBase.Stack.ChemicalStackKey;
+import com.wintercogs.beyonddimensions.Api.DataBase.Stack.KeyAmount;
 import mekanism.api.Action;
 import mekanism.api.chemical.ChemicalStack;
 import mekanism.api.chemical.IChemicalHandler;
-
-import java.util.List;
+import org.jetbrains.annotations.NotNull;
 
 public class ChemicalStackTypedHandler implements IChemicalHandler
 {
 
-    private StackTypedHandler handlerStorage;
+    private final StackHandler handlerStorage;
 
-    public ChemicalStackTypedHandler(StackTypedHandler handlerStorage) {
+    public ChemicalStackTypedHandler(StackHandler handlerStorage) {
         this.handlerStorage = handlerStorage;
     }
 
     @Override
     public int getChemicalTanks()
     {
-        return handlerStorage.getTypeIdIndexList(ChemicalStackType.ID)
-                .map(List::size)
+        return handlerStorage.getBucket(ChemicalStackKey.ID)
+                .map(StackHandler.SlotBucket::size)
                 .orElse(0);
     }
 
     @Override
-    public ChemicalStack getChemicalInTank(int tank)
+    public @NotNull ChemicalStack getChemicalInTank(int slot)
     {
-        return handlerStorage.getTypeIdIndexList(ChemicalStackType.ID)
-                .filter(slots -> tank >= 0 && tank < slots.size())
-                .map(slots -> slots.get(tank))
-                .filter(actualIndex -> actualIndex >= 0)
+        return handlerStorage.getBucket(ChemicalStackKey.ID)
+                .filter(slots -> slot>=0 && slot<slots.size())
+                .map(slots -> slots.get(slot))
                 .map(handlerStorage::getStackBySlot)
-                .map(obj -> (ChemicalStack) obj.getStack())
+                .map(stack -> {
+                    Object outStack = handlerStorage.getOutStackByKey(stack.key());
+                    if(outStack instanceof ChemicalStack chemicalStack)
+                    {
+                        if(!chemicalStack.isEmpty())
+                            chemicalStack.setAmount(stack.amount());
+                        return chemicalStack;
+                    }
+                    return null;
+                })
                 .orElse(ChemicalStack.EMPTY);
     }
 
     // 直接设置指定槽位化学品
     @Override
-    public void setChemicalInTank(int tank, ChemicalStack stack)
+    public void setChemicalInTank(int tank, @NotNull ChemicalStack stack)
     {
-        handlerStorage.getTypeIdIndexList(ChemicalStackType.ID)
+        handlerStorage.getBucket(ChemicalStackKey.ID)
                 .filter(slots -> tank >= 0 && tank < slots.size())
                 .map(slots -> slots.get(tank))
                 .filter(actualIndex -> actualIndex >= 0)
                 .ifPresent(actualIndex ->
-                        handlerStorage.setStackDirectly(actualIndex, new ChemicalStackType(stack.copy()))
+                        handlerStorage.setStackDirectly(actualIndex, new ChemicalStackKey(stack), stack.getAmount())
                 );
     }
 
@@ -66,17 +73,13 @@ public class ChemicalStackTypedHandler implements IChemicalHandler
     public ChemicalStack insertChemical(int tank, ChemicalStack stack, Action action)
     {
         if (stack.isEmpty()) return ChemicalStack.EMPTY;
-        return handlerStorage.getTypeIdIndexList(ChemicalStackType.ID)
+        return handlerStorage.getBucket(ChemicalStackKey.ID)
                 .filter(slots -> tank >= 0 && tank < slots.size())
                 .map(slots -> slots.get(tank))
                 .filter(actualIndex -> actualIndex >= 0)
                 .map(actualIndex -> {
-                    IStackType remainingStack = handlerStorage.insert(
-                            actualIndex,
-                            new ChemicalStackType(stack.copy()),
-                            action.simulate()
-                    );
-                    long remaining = remainingStack.getStackAmount();
+                    KeyAmount remainingStack = handlerStorage.insert(actualIndex, new ChemicalStackKey(stack), stack.getAmount(),action.simulate());
+                    long remaining = remainingStack.amount();
                     return (remaining > 0) ? stack.copyWithAmount(remaining) : ChemicalStack.EMPTY;
                 })
                 .orElse(stack.copy());
@@ -85,12 +88,16 @@ public class ChemicalStackTypedHandler implements IChemicalHandler
     @Override
     public ChemicalStack extractChemical(int tank, long amount, Action action)
     {
-        return handlerStorage.getTypeIdIndexList(ChemicalStackType.ID)
+        return handlerStorage.getBucket(ChemicalStackKey.ID)
                 .filter(slots -> tank >= 0 && tank < slots.size())
                 .map(slots -> slots.get(tank))
                 .filter(actualIndex -> actualIndex >= 0)
-                .map(actualIndex -> handlerStorage.extract(actualIndex, amount, action.simulate()))
-                .map(extracts -> ((ChemicalStackType)extracts).copyStack())
+                .map(actualIndex -> {
+                    if(handlerStorage.extract(actualIndex, amount, action.simulate()).toStack() instanceof ChemicalStack outStack)
+                        return outStack;
+                    else
+                        return ChemicalStack.EMPTY;
+                })
                 .orElse(ChemicalStack.EMPTY);
     }
 
@@ -99,7 +106,7 @@ public class ChemicalStackTypedHandler implements IChemicalHandler
     {
         if(stack.isEmpty())
             return ChemicalStack.EMPTY;
-        long remaining = handlerStorage.insert(new ChemicalStackType(stack.copy()), action.simulate()).getStackAmount();
+        long remaining = handlerStorage.insert(new ChemicalStackKey(stack), stack.getAmount(),action.simulate()).amount();
         if(remaining>0)
             return stack.copyWithAmount(remaining);
         return ChemicalStack.EMPTY;
@@ -108,20 +115,25 @@ public class ChemicalStackTypedHandler implements IChemicalHandler
     @Override
     public ChemicalStack extractChemical(long amount, Action action)
     {
-        return handlerStorage.getTypeIdIndexList(ChemicalStackType.ID)
-                .map(slots -> slots.getFirst())
+        return handlerStorage.getBucket(ChemicalStackKey.ID)
+                .map(slots -> slots.get(0))
                 .filter(actualIndex -> actualIndex >= 0)
                 .map(handlerStorage::getStackBySlot)
-                .map(stack -> stack.copyWithCount(amount))
-                .map(stack -> handlerStorage.extract(stack, action.simulate()))
-                .map(extracts -> ((ChemicalStackType)extracts).copyStack())
+                .map(stack -> {
+                    if(handlerStorage.extract(stack.key(), amount,action.simulate()).toStack() instanceof ChemicalStack outStack)
+                        return outStack;
+                    else
+                        return ChemicalStack.EMPTY;
+                })
                 .orElse(ChemicalStack.EMPTY);
     }
 
     @Override
     public ChemicalStack extractChemical(ChemicalStack stack, Action action)
     {
-        return ((ChemicalStackType)handlerStorage.extract(new ChemicalStackType(stack.copy()),action.simulate()))
-                .copyStack();
+        if(handlerStorage.extract(new ChemicalStackKey(stack), stack.getAmount(),action.simulate()).toStack() instanceof ChemicalStack outStack)
+            return outStack;
+        else
+            return ChemicalStack.EMPTY;
     }
 }
