@@ -1,17 +1,17 @@
 package com.wintercogs.beyonddimensions.Api.DataBase.Handler;
 
-import com.wintercogs.beyonddimensions.Api.DataBase.Stack.FluidStackType;
+import com.wintercogs.beyonddimensions.Api.DataBase.Stack.FluidStackKey;
+import com.wintercogs.beyonddimensions.Unit.BDMath;
 import net.neoforged.neoforge.fluids.FluidStack;
 import net.neoforged.neoforge.fluids.capability.IFluidHandler;
-
-import java.util.List;
+import org.jetbrains.annotations.NotNull;
 
 public class FluidStackTypedHandler implements IFluidHandler
 {
 
-    private StackTypedHandler handlerStorage;
+    private StackHandler handlerStorage;
 
-    public FluidStackTypedHandler(StackTypedHandler handlerStorage) {
+    public FluidStackTypedHandler(StackHandler handlerStorage) {
         this.handlerStorage = handlerStorage;
     }
 
@@ -20,21 +20,29 @@ public class FluidStackTypedHandler implements IFluidHandler
     @Override
     public int getTanks()
     {
-        return handlerStorage.getTypeIdIndexList(FluidStackType.ID)
-                .map(List::size)
+        return handlerStorage.getBucket(FluidStackKey.ID)
+                .map(StackHandler.SlotBucket::size)
                 .orElse(0);
     }
 
     @Override
-    public FluidStack getFluidInTank(int tank)
+    public @NotNull FluidStack getFluidInTank(int slot)
     {
-        return handlerStorage.getTypeIdIndexList(FluidStackType.ID)
-                .filter(slots -> tank >= 0 && tank < slots.size())  // 检查 tank 范围
-                .map(slots -> slots.get(tank))                      // 提取 actualIndex
-                .filter(actualIndex -> actualIndex >= 0)           // 过滤无效索引（如果实际索引可能为负）
-                .map(handlerStorage::getStackBySlot)                // 获取存储对象（自动处理 null）
-                .map(obj -> (FluidStack) obj.getStack())            // 直接转换，null 会被跳过
-                .orElse(FluidStack.EMPTY);                          // 兜底返回空
+        return handlerStorage.getBucket(FluidStackKey.ID)
+                .filter(slots -> slot>=0 && slot<slots.size())
+                .map(slots -> slots.get(slot))
+                .map(handlerStorage::getStackBySlot)
+                .map(stack -> {
+                    Object outStack = handlerStorage.getOutStackByKey(stack.key());
+                    if(outStack instanceof FluidStack fluidStack)
+                    {
+                        if(!fluidStack.isEmpty())
+                            fluidStack.setAmount(BDMath.clampLongToInt(stack.amount()));
+                        return fluidStack;
+                    }
+                    return null;
+                })
+                .orElse(FluidStack.EMPTY);
 
     }
 
@@ -45,38 +53,44 @@ public class FluidStackTypedHandler implements IFluidHandler
     }
 
     @Override
-    public boolean isFluidValid(int tank, FluidStack fluidStack)
+    public boolean isFluidValid(int tank, @NotNull FluidStack fluidStack)
     {
         return true;
     }
 
     @Override
-    public int fill(FluidStack fluidStack, FluidAction fluidAction)
+    public int fill(FluidStack fluidStack, @NotNull FluidAction fluidAction)
     {
         if(fluidStack.isEmpty())
             return 0;
         int allAmount = fluidStack.getAmount();
-        int remaining = (int) handlerStorage.insert(new FluidStackType(fluidStack.copy()), fluidAction.simulate()).getStackAmount();
+        int remaining = (int) handlerStorage.insert(new FluidStackKey(fluidStack), fluidStack.getAmount(),fluidAction.simulate()).amount();
         return allAmount-remaining;// 实际插入量
     }
 
     @Override
     public FluidStack drain(FluidStack fluidStack, FluidAction fluidAction)
     {
-        return ((FluidStackType)handlerStorage.extract(new FluidStackType(fluidStack.copy()),fluidAction.simulate()))
-                .copyStack();
+        if(handlerStorage.extract(new FluidStackKey(fluidStack), fluidStack.getAmount(),fluidAction.simulate()).toStack() instanceof FluidStack result)
+            return result;
+        else
+            return FluidStack.EMPTY;
     }
 
     @Override
     public FluidStack drain(int count, FluidAction fluidAction)
     {
-        return handlerStorage.getTypeIdIndexList(FluidStackType.ID)
-                .map(slots -> slots.getFirst())                     // 提取第一个索引
+        return handlerStorage.getBucket(FluidStackKey.ID)
+                .map(slots -> slots.get(0))                     // 提取第一个索引
                 .filter(actualIndex -> actualIndex >= 0)            // 过滤无效索引
                 .map(handlerStorage::getStackBySlot)                // 获取存储对象（自动处理 null）
-                .map(stack -> stack.copyWithCount(count))                         // 复制对象（若 stack 为 null，此步自动跳过）
-                .map(stack -> handlerStorage.extract(stack, fluidAction.simulate()))
-                .map(extracts -> ((FluidStackType)extracts).copyStack())                     // 生成 FluidStack
-                .orElse(FluidStack.EMPTY);                          // 兜底返回空
+                .map(stack -> {
+                    if(handlerStorage.extract(stack.key(),count,fluidAction.simulate()).toStack() instanceof FluidStack result)
+                        return result;
+                    else
+                        return FluidStack.EMPTY;
+                })
+                .orElse(FluidStack.EMPTY);
+
     }
 }
